workloads/kube-burner/workloads/large-networkpolicy-egress/00_banp_deny-traffic-mastercard.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: BaselineAdminNetworkPolicy
metadata:
  name: default
spec:
  subject:
    matchExpressions:
    - key: anplabel
      operator: In
      values: ["anp-restricted","anp-cidr","anp-open","anp-test"]      
    #namespaces: {}
  ingress:
  - name: "deny-all-ingress-to-any-ns"
    action: "Deny"
    from:
    - namespaces:
        namespaceSelector: {}
  # egress:
  # - name: "deny-all-egress-to-any-ns"
  #   action: "Deny"
  #   to:
  #   - namespaces:
  #       namespaceSelector: {}
